@@ -4,11 +4,11 @@ AC_INIT(esd.h)
 
 ESD_MAJOR_VERSION=0
 ESD_MINOR_VERSION=2
-ESD_MICRO_VERSION=6
+ESD_MICRO_VERSION=7
 ESD_VERSION=$ESD_MAJOR_VERSION.$ESD_MINOR_VERSION.$ESD_MICRO_VERSION
 
 dnl set version info for libesd.so to package rev - $MAJOR + $MINOR : $MICRO : $MINOR
-ESD_VERSION_INFO=2:6:2
+ESD_VERSION_INFO=2:7:2
 
 AC_SUBST(ESD_MAJOR_VERSION)
 AC_SUBST(ESD_MINOR_VERSION)
