@@ -1,3 +1,10 @@
+1998-11-03  Yo Ric Dude  <ricdude@ix.netcom.com>
+
+	* TODO, configure.in: update version number
+	* Makefile.am, esd-server.h, esd.h, esdctl.c, proto.c, esdmgr.c: 
+	add initial framework for remote management of server, filter out
+	diagnostic/debugging information from binary if we don't want it.
+
 Sat Oct 31 21:36:07 PST 1998 Manish Singh <yosh@gimp.org>
 
 	* esddsp.c: don't try to open local sound device if ESPEAKER is set
